[gd_scene load_steps=2 format=2]

[ext_resource path="res://source/game/Docked.gd" type="Script" id=1]

[node name="Docked" type="Container"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="PlanetName" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -200.0
margin_top = 30.0
margin_right = 200.0
margin_bottom = 40.0
text = "Nom de la plan√®te"
align = 1

[node name="Undock" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -200.0
margin_top = -180.0
margin_right = -100.0
margin_bottom = -150.0
grow_horizontal = 0
grow_vertical = 0
text = "Undock"

[node name="Refuel" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -200.0
margin_top = -230.0
margin_right = -100.0
margin_bottom = -200.0
grow_horizontal = 0
grow_vertical = 0
text = "Refuel"

[connection signal="pressed" from="Undock" to="." method="_on_Undock_pressed"]
[connection signal="pressed" from="Refuel" to="." method="_on_Refuel_pressed"]
